--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,4 +1,4 @@
-.homecontent
+/* .homecontent
 {
     background-color: #fff !important;
     width: 100%;
@@ -94,10 +94,10 @@ a:focus {
   outline: none !important;
   -webkit-box-shadow: none;
           box-shadow: none;
-}
+} */
 
 /*header section*/
-.hero_area {
+/* .hero_area {
   position: relative;
   min-height: 100vh;
   display: -webkit-box;
@@ -267,11 +267,11 @@ a:focus {
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
   top: 0;
-}
+} */
 
 /*end header section*/
 /* slider section */
-.slider_section {
+/* .slider_section {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -464,9 +464,9 @@ a:focus {
           box-shadow: 0 0 3px rgba(0, 0, 0, 0.05);
   padding: 10px 35px;
   border-radius: 10px;
-}
+} */
 
-.plant_section .options a {
+/* .plant_section .options a {
   color: #81b214;
 }
 
@@ -683,7 +683,7 @@ a:focus {
 }
 
 /* client section start */
-.client_section .heading_container {
+/* .client_section .heading_container {
   margin-bottom: 30px;
 }
 
@@ -759,11 +759,11 @@ a:focus {
   bottom: 0px;
   font-size: 24px;
   margin: 0 5px;
-}
+}  */
 
 /* client section end */
 /* footer section*/
-.footer_section {
+/* .footer_section {
   background-color: #206a5d;
   padding-top: 75px;
   text-align: center;
@@ -794,8 +794,8 @@ a:focus {
           flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
-  margin-top: 45px;
+          align-items: center; */
+  /* margin-top: 45px;
 }
 
 .footer_section .social-box .box {
@@ -814,9 +814,9 @@ a:focus {
 
 .footer_section .social-box a:hover {
   color: #206a5d;
-}
+} */
 
-.footer_items a {
+/* .footer_items a {
   position: relative;
 }
 
@@ -879,11 +879,11 @@ a:focus {
 
 .footer-info p a {
   color: inherit;
-}
+} */
 /*# sourceMappingURL=style.css.map */
 
 
-@media (max-width: 1300px) {}
+/* @media (max-width: 1300px) {}
 
 @media (max-width: 1120px) {}
 
@@ -938,4 +938,4 @@ a:focus {
 }
 
 
-@media (min-width:576px) and (max-width:991px) {}
+@media (min-width:576px) and (max-width:991px) {} */
