--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -80,7 +80,7 @@
                       are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in
                       the middle of text. All
                     </p>
-                    <a href="">
+                    <a routerLink="">
                       Read More
                     </a>
                   </div>
@@ -91,7 +91,7 @@
         
           <footer class="footer_section">
             <div class="container">
-              <a href="/home" class="footer-brand">
+              <a routerLink="/home" class="footer-brand">
                 Farm Fitting
               </a>
               <div class="row">
@@ -99,7 +99,7 @@
                   <div class="footer_items">
                     <div class="row">
                       <div class="col-md-4">
-                        <a href="">
+                        <a routerLink="">
                           <div class="item ">
                             <div class="img-box ">
                               <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -111,7 +111,7 @@
                         </a>
                       </div>
                       <div class="col-md-4">
-                        <a href="">
+                        <a routerLink="">
                           <div class="item ">
                             <div class="img-box ">
                               <i class="fa fa-phone" aria-hidden="true"></i>
@@ -123,7 +123,7 @@
                         </a>
                       </div>
                       <div class="col-md-4">
-                        <a href="">
+                        <a routerLink="">
                           <div class="item ">
                             <div class="img-box">
                               <i class="fa fa-envelope" aria-hidden="true"></i>
