--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,13 +10,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/aboutus">Aboutus</a>
+                    <a class="nav-link" routerLink="/aboutus">Aboutus</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contactus">Feedback</a>
+                    <a class="nav-link" routerLink="/contactus">Feedback</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/weatherreport">Weather</a>
+                    <a class="nav-link" routerLink="/weatherreport">Weather</a>
                 </li>
                 <li></li><div class="form-group" id="google_translate_element"></div>
                 <!-- <li class="nav-item dropdown">
@@ -32,16 +32,16 @@
                     </ul>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link" href="/notebook">Notebook</a>
+                    <a class="nav-link" routerLink="/notebook">Notebook</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/cropinfo">Crop Suggestion</a>
+                    <a class="nav-link" routerLink="/cropinfo">Crop Suggestion</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/soil-fertility-maps">soil-fertility-maps</a>
+                    <a class="nav-link" routerLink="/soil-fertility-maps">soil-fertility-maps</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/profile">profile</a>
+                    <a class="nav-link" routerLink="/profile">profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" (click)="Logout()" style="cursor: pointer;">Logout</a>
