--- a/src/app/components/index/index.component.html
+++ b/src/app/components/index/index.component.html
@@ -4,10 +4,10 @@
         
         <div class="row">
             <div class="col-sm">
-                <button class="btn loginbtn"><a href="/login">Login</a></button>
+                <button class="btn loginbtn"><a routerLink="login">Login</a></button>
             </div>
             <div class="col-sm">
-                <button class="btn registerbtn"><a href="/register">Register</a></button>
+                <button class="btn registerbtn"><a routerLink="/register">Register</a></button>
             </div>
         </div>
         <div>
