--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -45,7 +45,7 @@
                     <br>
                     <div class="text-center p-t-136" style="color: #fff;">
                         not an user? &nbsp;
-                        <a class="txt2" href="/register">
+                        <a class="txt2" routerLink="register">
                             Create your Account
                             <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
                         </a>
