--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -108,7 +108,7 @@
 					<br>
 					<div class="text-center p-t-136" style="color: #fff;">
 						Already have an account? &nbsp;
-						<a class="txt2" href="/login">
+						<a class="txt2" routerLink="login">
 							Login
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
