--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand logo" href="/home"><span class="logo-font">Farm Fitting</span></a>
+        <a class="navbar-brand logo" routerLink="/home"><span class="logo-font">Farm Fitting</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
